--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 
 NEXT_PUBLIC_DOMAIN = http://172.16.11.46:3030
+NEXT_PUBLIC_SOCKET = http://172.16.11.46:3040
+
 
 NEXT_PUBLIC_AI = http://172.16.11.68:5000
+
+# 存放位置
+NEXT_PUBLIC_IMG = "/home/pc/Music/api_test/images"
+NEXT_PUBLIC_PLY = "/home/pc/Music/api_test/pointClouds/"
+NEXT_PUBLIC_YML = "/home/pc/Music/api_test/cameraSettings/"
