--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.4",
     "@reduxjs/toolkit": "^2.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.0",
