--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-NEXT_PUBLIC_DOMAIN = http://172.16.11.46:3030
-NEXT_PUBLIC_SOCKET = http://172.16.11.46:3040
+NEXT_PUBLIC_DOMAIN = http://localhost:3030
+NEXT_PUBLIC_SOCKET = http://1localhost:3040
 
 
 NEXT_PUBLIC_AI = http://172.16.11.68:5000
