--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
-NEXT_PUBLIC_DOMAIN = http://172.16.11.46:3030
-NEXT_PUBLIC_SOCKET = http://172.16.11.46:3040
+NEXT_PUBLIC_DOMAIN = http://localhost:3030
+NEXT_PUBLIC_SOCKET = http://localhost:3040
 
-
+# http://172.16.11.46:
 NEXT_PUBLIC_AI = http://172.16.11.68:5000
 
 # 存放位置
