--- a/.env
+++ b/.env
@@ -1,11 +1,6 @@
 
-NEXT_PUBLIC_DOMAIN = http://localhost:3030
-<<<<<<< HEAD
-NEXT_PUBLIC_SOCKET = http://localhost:3040
-=======
-NEXT_PUBLIC_SOCKET = http://1localhost:3040
-
->>>>>>> 6b97c95222861be105f3a3111205013315a3432c
+NEXT_PUBLIC_DOMAIN = http://172.16.11.46:3030
+NEXT_PUBLIC_SOCKET = http://172.16.11.46:3040
 
 # http://172.16.11.46:
 NEXT_PUBLIC_AI = http://172.16.11.68:5000
