--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -25,6 +26,7 @@
     "redux": "^5.0.1",
     "sass": "^1.74.1",
     "socket.io-client": "^4.7.5",
+    "sortablejs": "^1.15.3",
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
